--- a/storage/minio/templates/secrets.yaml
+++ b/storage/minio/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: minio-secrets
-  namespace: paperless
+  namespace: minio
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
