--- a/automation/home-assistant/values.yaml
+++ b/automation/home-assistant/values.yaml
@@ -37,7 +37,7 @@ app-template:
         hajimari.io/appName: Home Assistant
         hajimari.io/info: Home automation that puts local control and privacy first
       hosts:
-        - host: &host homeassistant.toolstowelsandfroods.com
+        - host: &host ha.toolstowelsandfroods.com
           paths:
             - path: /
               pathType: Prefix
