--- a/apps/actualbudget/values.yaml
+++ b/apps/actualbudget/values.yaml
@@ -7,6 +7,10 @@ app-template:
     TZ: America/Los_Angeles
   service:
     main:
+      enabled: true
+      type: LoadBalancer
+      externalTrafficPolicy: Local
+      externalIPs: ["192.168.50.230"]  
       ports:
         http:
           port: 5006
