--- a/apps/photoprism/values.yaml
+++ b/apps/photoprism/values.yaml
@@ -1,29 +1,11 @@
-app-template:
-  controller:
-    annotations:
-      reloader.stakater.com/auto: "true"
-    type: statefulset
-    replicas: 1
-  image:
-    repository: docker.io/photoprism/photoprism
-    tag: latest@sha256:16645a56a968e9411a0b432a84887d8e2a77e8bdab96aa1d6b8654132b1797c8
-  env:
-    PHOTOPRISM_STORAGE_PATH: /photoprism/storage
-    PHOTOPRISM_ORIGINALS_PATH: /photoprism/originals
-    ## See other config options from PhotoPrism documentation: https://docs.photoprism.org/getting-started/config-options/
-    # PHOTOPRISM_DEBUG: "false"                      # Run in debug mode (shows additional log messages)
-    # PHOTOPRISM_PUBLIC: "true"                     # No authentication required (disables password protection)
-    # PHOTOPRISM_READONLY: "false"                   # Don't modify originals directory (reduced functionality)
-    # PHOTOPRISM_EXPERIMENTAL: "false"               # Enable experimental features
-    #PHOTOPRISM_SITE_URL: "https://photos.pub.toolstowelsandfroods.com"  # Canonical / public site URL
-    # PHOTOPRISM_SITE_AUTHOR: ""
-    # # You may optionally set user, group and/or file permissions using environment variables:
-    # UID: 1000
-    # GID: 1000
-    # UMASK: 0000
-    PHOTOPRISM_ORIGINALS_LIMIT: 10000 # in MB (default 1000)
+photoprism:
+  config:
+    PHOTOPRISM_ORIGINALS_LIMIT: 10000
+  envFrom:
+    - secretRef:
+        name: photoprism-secrets
   persistence:
-    config:
+    storage:
       enabled: true
       mountPath: /photoprism/storage
       type: nfs
@@ -36,11 +18,6 @@ app-template:
       type: nfs
       server: 192.168.1.89
       path: "/volume1/k3s/photoprism/originals"
-  service:
-    main:
-      ports:
-        http:
-          port: 2342
 
   ingress:
     main:
