--- a/apps/photoprism/Chart.yaml
+++ b/apps/photoprism/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: photoprism
 version: 0.0.0
 dependencies:
-  - name: photoprism
-    version: 0.1.0
-    repository: https://p80n.github.io/photoprism-helm/
+  - name: app-template
+    version: 1.3.1
+    repository: https://bjw-s.github.io/helm-charts
