--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -23,5 +23,8 @@ spec:
       remoteRef:
         key: /immich/
         property: POSTGRES_PASSWORD
-        
+    - secretKey: TYPESENSE_API_KEY
+      remoteRef:
+        key: /immich/
+        property: TYPESENSE_API_KEY
 
