--- a/apps/immich/Chart.yaml
+++ b/apps/immich/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: immich
 version: 0.0.0
 dependencies:
-  - name: app-template
-    version: 1.3.1
-    repository: https://bjw-s.github.io/helm-charts
+  - name: immich
+    version: 0.0.3
+    repository: https://immich-app.github.io/helm-charts
