--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -1,9 +1,4 @@
-app-template:
-  name: &app immich
-  namespace: immich
-  image:
-    repository: ghcr.io/immich-app/immich-proxy
-    tag: v1.51.2
+immich:
   envFrom:
     - secretRef:
         name: immich-secrets
@@ -34,108 +29,47 @@ app-template:
       tls:
         - hosts:
             - *host
+  redis:
+    enabled: true
+  postgresql:
+    enabled: true
   persistence:
     library:
       enabled: true
       existingClaim: immich-nfs
       mountPath: /usr/src/app/upload
-    config:
+  server:
+    image:
+      repository: docker.io/altran1502/immich-server
+      tag: v1.50.1
+  microservice:
+    image:
+      repository: docker.io/altran1502/immich-server
+      tag: v1.50.1
+  machine_learning:
+    image:
+      repository: docker.io/altran1502/immich-machine-learning
+      tag: v1.50.1
+    command: null
+    args: []
+    env:
+      TRANSFORMERS_CACHE: /usr/src/app/.transformers_cache
+  web:
+    image:
+      repository: docker.io/altran1502/immich-web
+      tag: v1.50.1
+  proxy:
+    image:
+      repository: docker.io/altran1502/immich-proxy
+      tag: v1.50.1
+  persistence:
+    transformers-cache:
       enabled: true
-      existingClaim: immich-nfs
-      mountPath: /config
+      type: emptyDir
+      mountPath: /usr/src/app/.transformers_cache
   resources:
     requests:
       cpu: 100m
       memory: 250Mi
     limits:
-      memory: 2000Mi
-  sidecars:
-    immich-server:
-      name: immich-server
-      image: ghcr.io/immich-app/immich-server:v1.51.2
-      volumeMounts:
-        - name: library
-          mountPath: /usr/src/app/upload
-      command: ["/bin/sh"]
-      args:
-        - ./start-server.sh
-      envFrom:
-        - secretRef:
-            name: immich-secrets
-        - configMapRef:
-            name: immich-configmap
-    immich-microservices:
-      name: immich-microservices
-      image: ghcr.io/immich-app/immich-server:v1.51.2
-      volumeMounts:
-        - name: library
-          mountPath: /usr/src/app/upload
-      command: ["/bin/sh"]
-      args:
-        - ./start-microservices.sh
-      envFrom:
-      - secretRef:
-          name: immich-secrets
-      - configMapRef:
-          name: immich-configmap
-    immich-redis:
-      name: immich-redis
-      image: public.ecr.aws/docker/library/redis:7.0.8
-      env:
-        - name: REDIS_REPLICATION_MODE
-          value: master
-      envFrom:
-      - configMapRef:
-          name: immich-configmap
-      command: ["redis-server"]
-    immich-web:
-      name: immich-web
-      image: ghcr.io/immich-app/immich-web:v1.51.2
-      volumeMounts:
-        - name: library
-          mountPath: /usr/src/app/upload
-      command: ["/bin/sh"]
-      args:
-        - ./entrypoint.sh
-      envFrom:
-      - secretRef:
-          name: immich-secrets
-      - configMapRef:
-          name: immich-configmap
-    immich-machinelearning:
-      name: immich-machinelearning
-      image: ghcr.io/immich-app/immich-machine-learning:v1.51.2
-      volumeMounts:
-        - name: library
-          mountPath: /usr/src/app/upload
-      envFrom:
-      - secretRef:
-          name: immich-secrets
-      - configMapRef:
-          name: immich-configmap
-    immich-db:
-      name: immich-db
-      image: postgres:15
-      env:
-        POSTGRES_USER: immich
-        POSTGRES_DB: immich
-      envFrom:
-      - secretRef:
-          name: immich-secrets
-    immich-typesense:
-      name: immich-typesense
-      image: typesense/typesense:0.24.0
-      envFrom:
-      - secretRef:
-          name: immich-secrets
-      - configMapRef:
-          name: immich-configmap
-      volumeMounts:
-        - name: config
-          mountPath: /config
-# resources:
-#   requests:
-#     cpu: 23m
-#     memory: 2975M
-#   limits:
-#     memory: 6572M
+      memory: 6000Mi
