--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -1,4 +1,7 @@
 immich:
+  repository:
+    name: immich-charts
+    url: https://github.com/immich-app/immich-charts
   envFrom:
     - secretRef:
         name: immich-secrets
