--- a/apps/immich/Chart.yaml
+++ b/apps/immich/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: immich
     version: 0.0.4
-    repository: https://github.com/immich-app/immich-charts
+    repository: https://immich-app.github.io/immich-charts
