--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -15,6 +15,14 @@ spec:
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
+    - secretKey: POSTGRES_PASSWORD
+      remoteRef:
+        key: /immich/
+        property: DB_PASSWORD
+    - secretKey: POSTGRES_POSTGRES_PASSWORD
+      remoteRef:
+        key: /immich/
+        property: POSTGRES_SUPER_PASS
     - secretKey: JWT_SECRET
       remoteRef:
         key: /immich/
