--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -2,7 +2,8 @@ immich:
   repository:
     name: immich-charts
     url: https://github.com/immich-app/immich-charts
-  common_envFrom:
+  common_env:
+    envFrom:
     - secretRef:
         name: immich-secrets
     - configMapRef:
