--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -48,16 +48,17 @@ immich:
     global:
       postgresql:
         auth:
-          password:
-            valueFrom:
-              secretKeyRef:
-                name: immich-secrets
-                key: DB_PASSWORD    
-          postgres-password:
-            valueFrom:
-              secretKeyRef:
-                name: immich-secrets
-                key: POSTGRES_SUPER_PASS  
+          existingSecret:
+            password:
+              valueFrom:
+                secretKeyRef:
+                  name: immich-secrets
+                  key: DB_PASSWORD    
+            postgres-password:
+              valueFrom:
+                secretKeyRef:
+                  name: immich-secrets
+                  key: POSTGRES_SUPER_PASS  
   persistence:
     library:
       enabled: true
