--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -15,11 +15,11 @@ spec:
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
-    - secretKey: POSTGRES_PASSWORD
+    - secretKey: postgres-password
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
-    - secretKey: POSTGRES_POSTGRES_PASSWORD
+    - secretKey: postgres-postgres-password
       remoteRef:
         key: /immich/
         property: POSTGRES_SUPER_PASS
