--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -31,4 +31,18 @@ spec:
       remoteRef:
         key: /immich/
         property: TYPESENSE_API_KEY
+    # Postgres Init
+    - secretKey: POSTGRES_PASS
+      remoteRef:
+        key: /immich/
+        property: DB_PASSWORD
+    - secretKey: POSTGRES_SUPER_PASS
+      remoteRef:
+        key: /cloudnative-pg/
+        property: POSTGRES_SUPER_PASS
+      - secretKey: POSTGRES_SUPER_USER
+      remoteRef:
+        key: /cloudnative-pg/
+        property: POSTGRES_SUPER_USER
+
 
