--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -61,6 +61,7 @@ immich:
             secretKeyRef:
               name: immich-secrets
               key: DB_PASSWORD
+      command: ["/bin/bash", "-c", "psql -U immich -h postgres-rw.cloudnative-pg.svc.cluster.local -c 'CREATE DATABASE immich;'"]
   persistence:
     library:
       enabled: true
