--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -49,7 +49,7 @@ immich:
   server:
     initContainers:
       init-db:
-        image: ghcr.io/onedr0p/postgres-initdb:14.6
+        image: postgres:14
         imagePullPolicy: IfNotPresent
         env:
           - name: POSTGRES_HOST
