--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -45,34 +45,11 @@ immich:
   redis:
     enabled: true
   postgresql:
-    enabled: false
-  server:
-    initContainers:
-      init-db:
-        image: postgres:14
-        imagePullPolicy: IfNotPresent
-        env:
-          - name: POSTGRES_HOST
-            value: postgres-rw.cloudnative-pg.svc.cluster.local
-          - name: POSTGRES_DB
-            value: immich
-          - name: POSTGRES_USER
-            value: immich
-          - name: POSTGRES_PASS
-            valueFrom:
-              secretKeyRef:
-                name: immich-secrets
-                key: DB_PASSWORD
-          - name: POSTGRES_SUPER_PASS
-            valueFrom:
-              secretKeyRef:
-                name: immich-secrets
-                key: POSTGRES_SUPER_PASS
-          - name: POSTGRES_SUPER_USER
-            valueFrom:
-              secretKeyRef:
-                name: immich-secrets
-                key: POSTGRES_SUPER_USER
+    enabled: true
+    global:
+      postgresql:
+        auth:
+          existingSecret: immich-secrets
                 
   persistence:
     library:
