--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -36,13 +36,13 @@ spec:
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
-    - secretKey: POSTGRES_SUPER_PASS
+    - secretKey: POSTGRES_PASSWORD
       remoteRef:
-        key: /cloudnative-pg/
+        key: /immich/
+        property: DB_PASSWORD
+    - secretKey: POSTGRES_POSTGRES_PASSWORD
+      remoteRef:
+        key: /immich/
         property: POSTGRES_SUPER_PASS
-    - secretKey: POSTGRES_SUPER_USER
-      remoteRef:
-        key: /cloudnative-pg/
-        property: POSTGRES_SUPER_USER
 
 
