--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -32,7 +32,7 @@ spec:
         key: /immich/
         property: TYPESENSE_API_KEY
     # Postgres Init
-    - secretKey: POSTGRES_PASS
+    - secretKey: postgres-password
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
@@ -40,7 +40,7 @@ spec:
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
-    - secretKey: POSTGRES_POSTGRES_PASSWORD
+    - secretKey: postgres-postgres-password
       remoteRef:
         key: /immich/
         property: POSTGRES_SUPER_PASS
