--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -35,8 +35,8 @@ spec:
     - secretKey: postgres-password
       remoteRef:
         key: /immich/
-        property: DB_PASSWORD
-    - secretKey: POSTGRES_PASSWORD
+        property: POSTGRESS_PASSWORD
+    - secretKey: password
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
