--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -15,7 +15,7 @@ spec:
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
-    - secretKey: POSTGRESS_PASSWORD
+    - secretKey: POSTGRES_PASSWORD
       remoteRef:
         key: /immich/
         property: DB_PASSWORD
@@ -35,7 +35,7 @@ spec:
     - secretKey: postgres-password
       remoteRef:
         key: /immich/
-        property: POSTGRESS_PASSWORD
+        property: POSTGRES_PASSWORD
     - secretKey: password
       remoteRef:
         key: /immich/
