--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -66,6 +66,7 @@ app-template:
     fsGroupChangePolicy: "OnRootMismatch"
   persistence:
     data:
+      enabled: true
       storageClass: longhorn
       mountPath: /usr/src/paperless/data
     media:
