--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -48,7 +48,7 @@ immich:
     global:
       postgresql:
         auth:
-          existingSecret: immich-secrets               
+          existingSecret: immich-postgresql             
   persistence:
     library:
       enabled: true
