--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -18,7 +18,7 @@ spec:
     - secretKey: POSTGRES_PASSWORD
       remoteRef:
         key: /immich/
-        property: DB_PASSWORD
+        property: POSTGRES_SUPER_PASS
     - secretKey: POSTGRES_POSTGRES_PASSWORD
       remoteRef:
         key: /immich/
