updade ingress and service

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -16,6 +16,9 @@ immich:
   service:
     main:
       enabled: true
+      type: LoadBalancer
+      externalTrafficPolicy: Local
+      externalIPs: ["192.168.50.225","192.168.50.226","192.168.50.227","192.168.50.228"]
       ports:
         http:
           port: 8080
@@ -32,11 +35,7 @@ immich:
         - host: &host photos.toolstowelsandfroods.com
           paths:
             - path: /
-              backend:
-                service:
-                  name: immich-proxy
-                  port:
-                    number: 8080
+
       tls:
         - secretName: immich-tls-certificate
           hosts:
