--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -70,7 +70,7 @@ app-template:
       storageClass: longhorn
       accessMode: ReadWriteMany
       mountPath: /usr/src/paperless/data
-      size: 100Mi
+      size: 10Gi
     media:
       enabled: true
       mountPath: /usr/src/paperless/media
