--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -2,12 +2,12 @@ immich:
   repository:
     name: immich-charts
     url: https://github.com/immich-app/immich-charts
-  common_env:
+  env:
     DB_PASSWORD:
       valueFrom:
         secretKeyRef:
           name: immich-secrets
-          key: password     
+          key: password
     JWT_SECRET:
       valueFrom:
         secretKeyRef:
@@ -47,7 +47,22 @@ immich:
     global:
       postgresql:
         auth:
-          existingSecret: immich-secrets           
+          existingSecret: immich-secrets
+  typesense:
+    enabled: true
+    env:
+      TYPESENSE_DATA_DIR: /tsdata
+      TYPESENSE_API_KEY:
+        valueFrom:
+          secretKeyRef:
+            name: immich-secrets
+            key: TYPESENSE_API_KEY
+    persistence:
+      tsdata:
+        # Enabling typesense persistence is recommended to avoid slow reindexing
+        enabled: true
+        accessMode: ReadWriteOnce
+        size: 1Gi
   persistence:
     library:
       enabled: true
