--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -57,12 +57,13 @@ immich:
           secretKeyRef:
             name: immich-secrets
             key: TYPESENSE_API_KEY
-#    persistence:
-#      tsdata:
-#        # Enabling typesense persistence is recommended to avoid slow reindexing
-#        enabled: true
-#        accessMode: ReadWriteOnce
-#        size: 1Gi
+    persistence:
+      tsdata:
+        # Enabling typesense persistence is recommended to avoid slow reindexing
+        enabled: true
+        accessMode: ReadWriteOnce
+        size: 1Gi
+        storageClass: longhorn
   persistence:
     library:
       enabled: true
