--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -2,7 +2,7 @@ immich:
   repository:
     name: immich-charts
     url: https://github.com/immich-app/immich-charts
-  env:
+  common_env:
     DB_PASSWORD:
       valueFrom:
         secretKeyRef:
