--- a/downloads/qbittorrent/values.yaml
+++ b/downloads/qbittorrent/values.yaml
@@ -46,7 +46,9 @@ app-template:
   persistence:
     config:
       enabled: true
-      existingClaim: qbittorrent
+      storageClass: longhorn
+      accessMode: ReadWriteMany
+      size: 1Gi
     data:
       enabled: true
       type: nfs
