--- a/media/readarr/values.yaml
+++ b/media/readarr/values.yaml
@@ -42,7 +42,9 @@ app-template:
   persistence:
     config:
       enabled: true
-      existingClaim: readarr
+      storageClass: longhorn
+      accessMode: ReadWriteMany
+      size: 1Gi
     data:
       enabled: true
       type: nfs
