--- a/authentication/authelia/Chart.yaml
+++ b/authentication/authelia/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: authelia
+name: hajimari
 version: 0.0.0
 dependencies:
-  - name: app-template
-    version: 1.3.1
-    repository: https://bjw-s.github.io/helm-charts
+  - name: hajimari
+    version: 0.8.57
+    repository: https://charts.authelia.com
